k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: grocery-store
  labels:
    app: backend
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31180   # same NodePort Kubernetes assigned earlier
      protocol: TCP
  selector:
    app: backend
